[package]
name = "hivemind"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = { version = "3.0.1", features = ["refreshing-token"] }
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
serde = "1.0.130"
chrono = "0.4.19"
inputbot = "0.5.1"
http = "0.2.5"