[package]
name = "hivemind"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
# Async
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
# Config file import
serde = "1.0.130"
toml = "0.5.8"
# Internet
twitch-irc = { version = "3.0.1", features = ["refreshing-token"] }
hyper = "0.14"
reqwest = { version = "0.11.6", features = ["json"] }
# Input
inputbot = "0.5.1"
# For the display
image = "0.23.14"
ggez = "0.7.0"
rusttype = "0.9.2"
imgui = "0.8.0"